--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.55.0",
     "@tailwindcss/vite": "^4.0.9",
     "flowbite": "^3.1.2",
     "nuxt": "^3.15.4",
