--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/icon": "^2.0.0",
     "@supabase/supabase-js": "^2.55.0",
-    "@tailwindcss/vite": "^4.0.9",
-    "flowbite": "^3.1.2",
+    "@tailwindcss/vite": "^4.1.14",
     "nuxt": "^3.15.4",
     "tailwindcss": "^4.0.9",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@iconify/vue": "^5.0.0"
   }
 }
